--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link link" href="./portfolio.html">Портфолио</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link link" href="https://www.devstudio.com/portfolio">Контакты</a>
+            <a class="nav-link link" href="./index.html">Контакты</a>
           </li>
         </ul>
       </nav>
