--- a/portfolio.html
+++ b/portfolio.html
@@ -21,40 +21,37 @@
   <header class="header">
     <div class="container">
       <nav class="menu">
-        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header"
-            lang="en">Studio</span></a>
-        <div class="nav-wrapper">
-          <ul class="nav-list list">
-            <li class="nav-item">
-              <a class="nav-link link" href="./index.html">Студия</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link current link" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link" href="https://www.devstudio.com/portfolio">Контакты</a>
-            </li>
-          </ul>
-        </div>
-        <div class="contact-wrapper">
-          <ul class="header-contacts list">
-            <li class="header-contacts-mail">
-              <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com
-                <svg class="header-envelope">
-                  <use href="./images/sprite.svg#icon-envelope"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="header-contacts-tel">
-              <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11
-                <svg class="header-tel">
-                  <use href="./images/sprite.svg#icon-smartphone"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
+        <ul class="nav-list list">
+          <li class="nav-item">
+            <a class="nav-link link" href="./index.html">Студия</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link current link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link" href="./portfolio.html">Контакты</a>
+          </li>
+        </ul>
       </nav>
+      <ul class="header-contacts list">
+        <li class="header-contacts-mail">
+          <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">
+            <svg class="header-envelope">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+            </svg>
+            <p>info@devstudio.com</p>
+          </a>
+        </li>
+        <li class="header-contacts-tel">
+          <a class="header-contact-link link" href="tel:+380961111111">
+            <svg class="header-tel">
+              <use href="./images/sprite.svg#icon-smartphone"></use>
+            </svg>
+            <p>+38 096 111 11 11</p>
+          </a>
+        </li>
+      </ul>
     </div>
   </header>
   <main>
