--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link link" href="./portfolio.html">Портфолио</a>
-            </li>
+          </li>
           <li class="nav-item">
             <a class="nav-link link" href="./index.html">Контакты</a>
           </li>
@@ -53,7 +53,7 @@
             <p>+38 096 111 11 11</p>
           </a>
         </li>
-       </ul>
+      </ul>
     </div>
   </header>
   <main>
@@ -392,8 +392,21 @@
           </li>
         </ul>
       </div>
+      <div class="footer-social-list">
+        <h3 class="footer-social-title">Подпишитесь на рассылку</h3>
+        <form action="" class="signup-form">
+          <input type="email" placeholder="E-mail" class="signup-email">
+          <button type="submit" class="modal-btn">
+            <p class="btn-title">Подписаться</p>
+            <svg class="btn-icon">
+              <use href="./images/sprite.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </div>
   </footer>
+  <!-- MODAL -->
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="modal-close-btn" data-modal-close>
@@ -401,6 +414,37 @@
           <use href="./images/sprite.svg#icon-Vector"></use>
         </svg>
       </button>
+      <form action="#" class="modal-form"></form>
+      <label for="" class="modal-form-field">
+        Имя
+        <span class="modal-form-input-wrapper">
+          <input type="text" name="user-name" class="modal-form-input" required minlength="2">
+          <svg class="modal-form-icon">
+            <use href="./images/sprite.svg#user"></use>
+          </svg>
+        </span>
+      </label>
+      <label for="" class="modal-form-field">
+        Телефон
+        <span class="modal-form-input-wrapper">
+          <input type="tel" name="user-phone" class="modal-form-input" required
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-111-11-11">
+          <svg class="modal-form-icon">
+            <use href="./images/sprite.svg#phone"></use>
+          </svg>
+        </span>
+      </label>
+      <label for="" class="modal-form-field">
+        Е-маил
+        <input type="email" name="user-email" class="modal-form-input" required>
+      </label>
+      <label for="" class="modal-form-field">
+        Сообщение
+        <textarea name="user-message" class="modal-form-message">
+            </label>
+            <input type="checkbox" name="user-term" class="modal-form-agreement">
+            <label for="" class="modal-form-check-desc">Соглашаюсь с рассылкой и принимаю <a href="" class="licence-agreement">Условия договора</a></label>
+      <button type="submit" class="modal-btn">Отправить</button>      
     </div>
   </div>
   <script src="./js/modal.js"></script>
