--- a/index.html
+++ b/index.html
@@ -395,12 +395,14 @@
       <div class="footer-social-list">
         <h3 class="footer-social-title">Подпишитесь на рассылку</h3>
         <form action="" class="signup-form">
-          <input type="email" placeholder="E-mail" class="signup-email">
-          <button type="submit" class="modal-btn">
-            <p class="btn-title">Подписаться</p>
-            <svg class="btn-icon">
-              <use href="./images/sprite.svg#icon-send"></use>
-            </svg>
+          <input type="email" name="signup-email" placeholder="E-mail" class="signup-email">
+          <button type="submit" class="footer-modal-btn">
+            <span class="footer-btn-wrapper">
+              <p class="btn-title">Подписаться</p>
+              <svg class="btn-icon">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </span>
           </button>
         </form>
       </div>
@@ -414,37 +416,45 @@
           <use href="./images/sprite.svg#icon-Vector"></use>
         </svg>
       </button>
-      <form action="#" class="modal-form"></form>
-      <label for="" class="modal-form-field">
+      <form action="#" class="modal-form" autocomplete="off"></form>
+      <p class="form-title">Оставьте свои данные, мы вам перезвоним</p>
+      <label for="user" class="modal-form-field">
         Имя
         <span class="modal-form-input-wrapper">
-          <input type="text" name="user-name" class="modal-form-input" required minlength="2">
           <svg class="modal-form-icon">
             <use href="./images/sprite.svg#user"></use>
           </svg>
+          <input type="text" id="user" name="user-name" class="modal-form-input" required minlength="2">
         </span>
       </label>
-      <label for="" class="modal-form-field">
+      <label for="tel" class="modal-form-field">
         Телефон
         <span class="modal-form-input-wrapper">
-          <input type="tel" name="user-phone" class="modal-form-input" required
-            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-111-11-11">
           <svg class="modal-form-icon">
             <use href="./images/sprite.svg#phone"></use>
           </svg>
+          <input type="tel" id="tel" name="user-phone" class="modal-form-input" required
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-111-11-11">
+        </span>
+      </label>
+      <label for="email" class="modal-form-field">
+        Почта
+        <span class="modal-form-input-wrapper">
+          <svg class="modal-form-icon">
+            <use href="./images/sprite.svg#letter"></use>
+          </svg>
+          <input type="email" id="email" name="user-email" class="modal-form-input" required>
         </span>
       </label>
       <label for="" class="modal-form-field">
-        Е-маил
-        <input type="email" name="user-email" class="modal-form-input" required>
+        Комментарий
+        <textarea name="user-message" class="modal-form-message" placeholder="Введите текст"></textarea>
       </label>
-      <label for="" class="modal-form-field">
-        Сообщение
-        <textarea name="user-message" class="modal-form-message">
-            </label>
-            <input type="checkbox" name="user-term" class="modal-form-agreement">
-            <label for="" class="modal-form-check-desc">Соглашаюсь с рассылкой и принимаю <a href="" class="licence-agreement">Условия договора</a></label>
-      <button type="submit" class="modal-btn">Отправить</button>      
+      <input type="checkbox" id="user-term" name="user-term" class="modal-form-agreement visually-hidden">
+      <label for="user-term" class="modal-form-check-desc">Соглашаюсь с рассылкой и принимаю&nbsp;
+        <a href="" class="licence-agreement">Условия договора</a>
+      </label>
+      <button type="submit" class="modal-form-btn">Отправить</button>
     </div>
   </div>
   <script src="./js/modal.js"></script>
