--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,8 @@
   <header class="header">
     <div class="container">
       <nav class="menu">
-        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header"
+            lang="en">Studio</span></a>
         <ul class="nav-list list">
           <li class="nav-item">
             <a class="nav-link link" href="./index.html">Студия</a>
@@ -233,7 +234,7 @@
         </ul>
       </div>
       <div class="footer-social-list">
-        <h2 class="footer-social-title">присоединяйтесь</h2>
+        <h3 class="footer-social-title">присоединяйтесь</h3>
         <ul class="social-list list">
           <li class="social-list-item">
             <a href="" class="social-list-link link">
@@ -264,6 +265,20 @@
             </a>
           </li>
         </ul>
+      </div>
+      <div class="footer-social-list">
+        <h3 class="footer-social-title">Подпишитесь на рассылку</h3>
+        <form action="" class="signup-form">
+          <input type="email" name="signup-email" placeholder="E-mail" class="signup-email">
+          <button type="submit" class="footer-modal-btn">
+            <span class="footer-btn-wrapper">
+              <p class="btn-title">Подписаться</p>
+              <svg class="btn-icon">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </span>
+          </button>
+        </form>
       </div>
     </div>
   </footer>
