--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
         </ul>
       </div>
       <div class="footer-social-list">
-        <h3 class="footer-social-title">присоединяйтесь</h3>
+        <b class="footer-social-title">присоединяйтесь</b>
         <ul class="social-list list">
           <li class="social-list-item">
             <a href="" class="social-list-link link">
@@ -266,8 +266,8 @@
           </li>
         </ul>
       </div>
-      <div class="footer-social-list">
-        <h3 class="footer-social-title">Подпишитесь на рассылку</h3>
+      <div class="footer-form">
+        <b class="footer-social-title">Подпишитесь на рассылку</b>
         <form action="" class="signup-form">
           <input type="email" name="signup-email" placeholder="E-mail" class="signup-email">
           <button type="submit" class="footer-modal-btn">
@@ -282,6 +282,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
