--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link" href="./index.html">Контакты</a>
+            <a class="nav-link link" href="#footer">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -352,7 +352,7 @@
         <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="address-list list">
           <li class="address-list-item">
-            <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-link link" id="footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="address-list-item">
             <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
@@ -394,11 +394,11 @@
       </div>
       <div class="footer-form">
         <b class="footer-social-title">Подпишитесь на рассылку</b>
-        <form action="" class="signup-form">
+        <form action="#" class="signup-form">
           <input type="email" name="signup-email" placeholder="E-mail" class="signup-email">
           <button type="submit" class="footer-modal-btn">
             <span class="footer-btn-wrapper">
-              <p class="btn-title">Подписаться</p>
+              <span class="btn-title">Подписаться</span>
               <svg class="btn-icon">
                 <use href="./images/sprite.svg#icon-send"></use>
               </svg>
@@ -446,9 +446,10 @@
             </svg>
           </span>
         </label>
-        <label for="" class="modal-form-field comment">
+        <label for="user-message" class="modal-form-field comment">
           Комментарий
-          <textarea name="user-message" class="modal-form-message" placeholder="Введите текст"></textarea>
+          <textarea name="user-message" id="user-message" class="modal-form-message"
+            placeholder="Введите текст"></textarea>
         </label>
         <input type="checkbox" id="user-term" name="user-term" class="modal-form-agreement visually-hidden">
         <label for="user-term" class="modal-form-check-desc">Соглашаюсь с рассылкой и принимаю&nbsp;
