--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </button>
       <ul class="mobile-menu__list list">
         <li class="mobile-menu__item">
-          <a href="./index.html" class="mobile-menu__link link">Студия</a>
+          <a href="./index.html" class="mobile-menu__link link current">Студия</a>
         </li>
         <li class="mobile-menu__item">
           <a href="./portfolio.html" class="mobile-menu__link link">Портфолио</a>
@@ -77,28 +77,30 @@
           <a href="#footer" class="mobile-menu__link link">Контакты</a>
         </li>
       </ul>
-      <ul class="mobile-contacts-list list">
-        <li class="mobile-contacts-list__item">
-          <a class="mobile-contacts-list__tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-        <li class="mobile-contacts-list__item">
-          <a class="mobile-contacts-list__mail link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-        </li>
-      </ul>
-      <ul class="mobile-social-list list">
-        <li class="mobile-social-list__item">
-          <a href="" class="mobile-social-list__link link">Instagram</a>
-        </li>
-        <li class="mobile-social-list__item">
-          <a href="" class="mobile-social-list__link link">Twitter</a>
-        </li>
-        <li class="mobile-social-list__item">
-          <a href="" class="mobile-social-list__link link">Facebook</a>
-        </li>
-        <li class="mobile-social-list__item">
-          <a href="" class="mobile-social-list__link link">LinkedIn</a>
-        </li>
-      </ul>
+      <div class="mobile-menu__contacts-wrapper">
+        <ul class="mobile-contacts-list list">
+          <li class="mobile-contacts-list__item">
+            <a class="mobile-contacts-list__tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+          <li class="mobile-contacts-list__item">
+            <a class="mobile-contacts-list__mail link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          </li>
+        </ul>
+        <ul class="mobile-social-list list">
+          <li class="mobile-social-list__item">
+            <a href="" class="mobile-social-list__link link">Instagram</a>
+          </li>
+          <li class="mobile-social-list__item">
+            <a href="" class="mobile-social-list__link link">Twitter</a>
+          </li>
+          <li class="mobile-social-list__item">
+            <a href="" class="mobile-social-list__link link">Facebook</a>
+          </li>
+          <li class="mobile-social-list__item">
+            <a href="" class="mobile-social-list__link link">LinkedIn</a>
+          </li>
+        </ul>
+      </div>      
     </div>
   </header>
   <main>
@@ -569,7 +571,7 @@
             placeholder="Введите текст"></textarea>
         </label>
         <input type="checkbox" id="user-term" name="user-term" class="modal-form-agreement visually-hidden">
-        <label for="user-term" class="modal-form-check-desc">Соглашаюсь с рассылкой и принимаю&nbsp;
+        <label for="user-term" class="modal-form-check-desc">Соглашаюсь с рассылкой и принимаю&nbsp
           <a href="" class="licence-agreement">Условия договора</a>
         </label>
         <button type="submit" class="modal-form-btn">Отправить</button>
